--- a/templates/index.dust
+++ b/templates/index.dust
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>{title}</title>
+<title>{page_title}</title>
 
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="assets/item.min.css">
 
 <script src="assets/jquery.js"></script>
-  
+
 <script src="assets/semantic.min.js"></script>
 <script>
 $(function() {
@@ -35,11 +35,11 @@ body.items {
 	font-size: 0.85em;
 	margin:0;
 }
-.ui.items>.row>.item, .ui.items>.item { 
+.ui.items>.row>.item, .ui.items>.item {
 	width: 360px;
 	max-height: 375px;
 }
-.ui.items .item:hover { 
+.ui.items .item:hover {
 	<!-- cursor:default; -->
 
 }
