--- a/templates/index.dust
+++ b/templates/index.dust
@@ -1,6 +1,8 @@
 <html>
 <head>
-<title>{page_title}</title>
+<title>See, also: Visualizations of Wikipedia</title>
+<meta name="description" content="A collection of visualization projects built on Wikipedia data">
+<meta name="keywords" content="Wikipedia,visualization,visualizing,data,interactive,infographic,research,seealso">
 
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -161,5 +163,14 @@ a.label {
 		{/sections}
 	</div>
 </div>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-40320359-1', 'hatnote.com');
+    ga('send', 'pageview');
+    </script>
+
 </body>
 </html>
